Fix T92268: Group input and output nodes have inconsistent padding

The group output node did not have the same size padding as the group
input, leading to the node looking different and actually being smaller.

Differential Revision: https://developer.blender.org/D13092